# DuckDBFederation

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: generate_sample_data.py  seed_pg.sql
src/parquet_federation/: __init__.py  config.py  exceptions.py  main.py  middleware.py
src/parquet_federation/api/: dependencies.py
src/parquet_federation/api/v1/: federation.py  router.py
src/parquet_federation/core/: duck.py  extensions.py  secrets.py
src/parquet_federation/federation/: engine.py  query_builder.py  result.py  sources.py
src/parquet_federation/schemas/: query.py  result.py
tests/: conftest.py
tests/integration/: test_federation_api.py
tests/unit/: test_engine.py  test_query_builder.py
