[project]
name = "parquet-federation"
version = "1.0.0"
description = "DuckDB-powered data federation: JOIN S3 Parquet + PostgreSQL + HTTP CSV in one SQL query"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "duckdb>=1.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyarrow>=15.0",
    "pandas>=2.0",
    "boto3",
    "uvicorn[standard]",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
    "moto[s3]",
    "faker",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
